# battleship

./: .gitignore  CMakeLists.txt  Makefile  lineCount.py  oldMakeFile  oldMakefile
src/: ai.cpp  ai.h  gameconf.cpp  gameconf.h  gamestate.h  gm.cpp  gm.h  main.cpp  map.cpp  map.h  ship.cpp  ship.h  types.cpp  types.h  ui.cpp  ui.h  util.cpp  util.h
